Removes list padding as it creates alignment issues

--- a/themes/icore-open/_index.scss
+++ b/themes/icore-open/_index.scss
@@ -83,9 +83,6 @@ and spacing sets */
   $link-visited-text-color: #{color-scheme.$oc-violet-8},
   $link-visited-hover-text-color: #{color-scheme.$oc-violet-9},
 
-  // list
-  $list-padding: 0,
-
   // footer
   $footer-align-items: center,
   $footer-justify-content: center,
